--- a/index.html
+++ b/index.html
@@ -1,48 +1,26 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Paypys Burguer</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Paypy's Burguer</title>
 
     <link rel="stylesheet" href="style.css">
     <link rel="manifest" href="manifest.json">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Oswald:wght@200..700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
-        rel="stylesheet">
 
-    <style>
-        body {
-            font-family: 'Montserrat', 'Oswald', 'Roboto', sans-serif;
-            background-color: #f0f4f8;
-            display: flex;
-            flex-direction: column;
-            min-height: 100vh;
-        }
+    <!-- GOOGLE FONTS (las mismas families que usas) -->
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Oswald:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 
-        main {
-            flex-grow: 1;
-        }
-    </style>
 </head>
-
 <body>
-    <header></header>
 
-    <main id="contenido"></main>
+    <main id="app"></main>
 
-    <footer>
-        <p>Derechos reservados 2025</p>
-    </footer>
-
-    <!-- Firebase primero -->
+    <!-- Firebase -->
     <script type="module" src="firebase.js"></script>
 
-    <!-- Luego tu app -->
-    <script type="module" src="app.js"></script>
+    <!-- Login -->
+    <script type="module" src="login.js"></script>
 
 </body>
 </html>
