--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
+    <base href="/ItsRaven-13.github.io-PWA_PAYPYSBURGUER/">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Paypy's Burguer</title>
@@ -9,9 +11,14 @@
     <link rel="manifest" href="manifest.json">
 
     <!-- GOOGLE FONTS (las mismas families que usas) -->
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Oswald:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Oswald:wght@400;700&family=Roboto:wght@400;700&display=swap"
+        rel="stylesheet">
+    <link rel="icon" type="image/png" href="/ItsRaven-13.github.io-PWA_PAYPYSBURGUER/assets/logo.png">
+
 
 </head>
+
 <body>
 
     <main id="app"></main>
@@ -23,4 +30,5 @@
     <script type="module" src="login.js"></script>
 
 </body>
+
 </html>
