--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 
 <head>
-    <base href="/ItsRaven-13.github.io-PWA_PAYPYSBURGUER/">
+    <base href="/PWA_PAYPYSBURGUER/">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Paypy's Burguer</title>
@@ -10,23 +10,18 @@
     <link rel="stylesheet" href="style.css">
     <link rel="manifest" href="manifest.json">
 
-    <!-- GOOGLE FONTS (las mismas families que usas) -->
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Oswald:wght@400;700&family=Roboto:wght@400;700&display=swap"
         rel="stylesheet">
-    <link rel="icon" type="image/png" href="/ItsRaven-13.github.io-PWA_PAYPYSBURGUER/assets/logo.png">
 
-
+    <link rel="icon" type="image/png" href="/PWA_PAYPYSBURGUER/assets/logo.png">
 </head>
 
 <body>
 
     <main id="app"></main>
 
-    <!-- Firebase -->
     <script type="module" src="firebase.js"></script>
-
-    <!-- Login -->
     <script type="module" src="login.js"></script>
 
 </body>
