--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="es">
 
 <head>
-    <base href="/PWA_PAYPYSBURGUER/">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Paypy's Burguer</title>
@@ -14,7 +13,7 @@
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Oswald:wght@400;700&family=Roboto:wght@400;700&display=swap"
         rel="stylesheet">
 
-    <link rel="icon" type="image/png" href="/PWA_PAYPYSBURGUER/assets/logo.png">
+    <link rel="icon" type="image/png" href="assets/logo.png">
 </head>
 
 <body>
