--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Oswald:wght@400;700&family=Roboto:wght@400;700&display=swap"
         rel="stylesheet">
 
-    <link rel="icon" type="image/png" href="assets/logo.png">
+    <link rel="icon" type="image/png" href="assets/img/logo.png">
 </head>
 
 <body>
