--- a/registro.html
+++ b/registro.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
     <meta name="theme-color" content="#000000"/>
-    <meta name="description" content="Paypy's Burguer - Las mejores hamburguesas">
-    <title>Paypy's Burguer</title>
+    <meta name="description" content="Registro - Paypy's Burguer">
+    <title>Registro - Paypy's Burguer</title>
 
     <!-- PWA Meta Tags -->
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -26,16 +26,16 @@
 <body>
     <div id="loading" class="loading">
         <div class="spinner"></div>
-        <p>Cargando Paypy's Burguer...</p>
+        <p>Cargando registro...</p>
     </div>
 
     <main id="app">
-        <!-- Tu contenido actual del login -->
+        <!-- El contenido se cargará dinámicamente -->
     </main>
 
     <!-- Scripts -->
     <script type="module" src="app.js"></script>
     <script type="module" src="firebase.js"></script>
-    <script type="module" src="login.js"></script>
+    <script type="module" src="registro.js"></script>
 </body>
 </html>
