--- a/registro.html
+++ b/registro.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
-    <meta name="theme-color" content="#000000"/>
+    <meta name="theme-color" content="#000000" />
     <meta name="description" content="Registro - Paypy's Burguer">
     <title>Registro - Paypy's Burguer</title>
 
     <!-- PWA Meta Tags -->
+    <!-- En el <head> de ambos archivos -->
+    <meta name="mobile-web-app-capable" content="yes">
+    <!-- Opcional: mantener para compatibilidad con iOS -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="Paypy's Burguer">
@@ -17,7 +21,9 @@
     <link rel="manifest" href="manifest.json">
 
     <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Oswald:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Oswald:wght@400;700&family=Roboto:wght@400;700&display=swap"
+        rel="stylesheet">
 
     <!-- Icons -->
     <link rel="icon" type="image/png" href="assets/img/logo.png">
@@ -38,4 +44,5 @@
     <script type="module" src="firebase.js"></script>
     <script type="module" src="registro.js"></script>
 </body>
+
 </html>
