--- a/index.html
+++ b/index.html
@@ -8,22 +8,16 @@
     <meta name="description" content="Paypy's Burguer - Las mejores hamburguesas">
     <title>Paypy's Burguer</title>
 
-    <!-- PWA Meta Tags -->
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="Paypy's Burguer">
-    <!-- En el <head> de ambos archivos -->
-    <meta name="mobile-web-app-capable" content="yes">
-    <!-- Opcional: mantener para compatibilidad con iOS -->
+    <!-- PWA -->
     <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
 
     <!-- Styles -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <link rel="manifest" href="manifest.json">
 
     <!-- Fonts -->
-    <link
-        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Oswald:wght@400;700&family=Roboto:wght@400;700&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Oswald:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 
     <!-- Icons -->
     <link rel="icon" type="image/png" href="assets/img/logo.png">
@@ -35,14 +29,11 @@
         <p>Cargando Paypy's Burguer...</p>
     </div>
 
-    <main id="app">
-        <!-- Tu contenido actual del login -->
-    </main>
+    <!-- Contenedor SPA -->
+    <main id="app"></main>
 
-    <!-- Scripts -->
-    <script type="module" src="app.js"></script>
-    <script type="module" src="firebase.js"></script>
-    <script type="module" src="login.js"></script>
+    <!-- SOLO ESTE SCRIPT ES NECESARIO -->
+    <script type="module" src="./js/app.js"></script>
 </body>
 
 </html>
