--- a/index.html
+++ b/index.html
@@ -1,39 +1,27 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Paypy's Burguer - Las mejores hamburguesas">
-    <title>Paypy's Burguer</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Paypys Burguer</title>
 
-    <!-- PWA -->
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="mobile-web-app-capable" content="yes">
-
-    <!-- Styles -->
-    <link rel="stylesheet" href="assets/css/style.css">
+    <!-- Manifest -->
     <link rel="manifest" href="manifest.json">
 
-    <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Oswald:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-
-    <!-- Icons -->
-    <link rel="icon" type="image/png" href="assets/img/logo.png">
+    <!-- CSS -->
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
-    <div id="loading" class="loading">
-        <div class="spinner"></div>
-        <p>Cargando Paypy's Burguer...</p>
-    </div>
+    <div id="loading">Cargando...</div>
 
-    <!-- Contenedor SPA -->
-    <main id="app"></main>
+    <h1>Paypys Burguer</h1>
+    <button id="btnLogin">Iniciar sesión</button>
+    <button id="btnCatalogo">Catálogo</button>
+    <button id="btnAdmin">Admin</button>
 
-    <!-- SOLO ESTE SCRIPT ES NECESARIO -->
-    <script type="module" src="./js/app.js"></script>
+    <!-- Scripts -->
+    <script type="module" src="assets/js/firebase.js"></script>
+    <script type="module" src="assets/js/app.js"></script>
 </body>
-
 </html>
