--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <link rel="manifest" href="manifest.json">
 
     <link rel="icon" type="image/png" href="assets/img/logo.png">
@@ -25,8 +25,8 @@
 
     <main id="app"></main>
 
-    <script type="module" src="./app.js"></script>
-    <script type="module" src="./firebase.js"></script>
-    <script type="module" src="./login.js"></script>
+    <script type="module" src="./assets/js/app.js"></script>
+    <script type="module" src="./assets/js/firebase.js"></script>
+    <script type="module" src="./assets/js/login.js"></script>
 </body>
 </html>
